# diffsqp

./: .gitignore  README.md  pyproject.toml
diffsqp/costs/: __init__.py  base_cost.py  lqr_cost.py
diffsqp/dynamics/: __init__.py  base_dynamics.py  cartpole_dynamics.py  pendulum.py  pendulum_dynamics.py
diffsqp/solvers/: admm.py  lqr.py  ssqp.py
diffsqp/utils/: animate.py  math.py  plotting.py
examples/: example.py  opt_acrobot.py  opt_acrobot_forward.py  opt_acrobot_inverse.py  opt_cartpole.py  opt_cartpole_forward.py  opt_cartpole_inverse.py  opt_pendulum.py  simple_pendulum.py  simulate.py  simulate_cartpole.py  simulate_pendulum.py
examples/configs/: config_acrobot_forward.yaml  config_acrobot_inverse.yaml  config_cartpole_forward.yaml  config_cartpole_inverse.yaml
paper_experiments/: cartpole_diffmpc.py  cartpole_experiment.py  cartpole_sqp.py  run_cpu_gpu_comparison.sh  run_exps.sh  run_qp_comparison.sh  run_sqp_comparison.sh
src/diffsqp/constraints/: __init__.py  acrobot_underactuation.py  base_constraint.py  cartpole_underactuation.py  control_equality_constraint.py  generic_constraint.py  underactuation_constraint.py
src/diffsqp/costs/: __init__.py  base_cost.py  lqr_cost.py  terminal_cost.py
src/diffsqp/dynamics/: __init__.py  acrobot_forward.py  acrobot_inverse.py  base_dynamics.py  cartpole_dynamics.py  cartpole_inverse.py  cartpole_inverse_constrained.py  pendulum_dynamics.py
src/diffsqp/problems/: __init__.py  (+1 more)
test/: test_cost.py  test_dynamics.py  test_lqr_cost.py
visuals/: load_urdf.py
visuals/robots/: cartpole.urdf
(+14 files in other folders)
