[project]
name = "diffsqp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpylayers>=1.0.1",
    "jax[cuda13]>=0.9.0.1",
    "matplotlib>=3.10.8",
    "opt-einsum>=3.4.0",
    "torch>=2.10.0",
    "viser>=1.0.21",
]
